--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -22,8 +22,9 @@ jobs:
       - uses: actions/stale@v10
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          close-issue-message: "This issue won't be fixed and was closed because it has been inactive for 7 days."
-          days-before-issue-stale: -1
+          stale-issue-message: 'This issue is stale because it has been open 7 days with no activity. Remove stale label or comment or this will be closed in 7 days.'
+          close-issue-message: "This issue won't be fixed and was closed because it has been inactive for 14 days."
+          days-before-issue-stale: 7
           days-before-issue-close: 7
           days-before-pr-close: -1
           days-before-pr-stale: -1
