feat(actions): Official support for native javascript actions (#1022)
BREAKING CHANGE: Some of you were using hacks to execute javascript
actions. This release officially implements `action: javascript` and
this is the **only supported** way to execute javascript actions going
forward. Any other configuration might execute the javascript action
while the card is first displayed. Please update your config accordingly
and read the updated documentation.

Closes #1021

--- a/test/ui-lovelace.yaml
+++ b/test/ui-lovelace.yaml
@@ -1567,6 +1567,21 @@ views:
             grid_options:
               rows: 2
               columns: 4
+          - type: 'custom:button-card'
+            icon: mdi:console
+            name: javascript action
+            tap_action:
+              action: javascript
+              javascript: >
+                [[[
+                  alert("Hello from button card");
+                ]]]
+
+
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
 
       - type: grid
         cards:
