feat(protect): allow configuring `protect` at the card level (#1049)
```yaml
type: custom:button-card
entity: light.aquarium
protect: # globally enables the PIN for all actions
  pin: '1234'
  success_message: 'PIN is correct!'
  failure_message: 'PIN is wrong!'
tap_action:
  action: toggle
hold_action:
  action: perform-action
  perform_action: switch.toggle
  target:
    entity_id: switch.aquarium_pump
icon_tap_action:
  action: more-info
  entity: sensor.aquarium_temperature
  protect:
    pin: '' # Setting this to an empty string disables the pin for this action only.
```

Closes #1044

--- a/test/ui-lovelace.yaml
+++ b/test/ui-lovelace.yaml
@@ -1630,15 +1630,27 @@ views:
           - type: 'custom:button-card'
             icon: mdi:lock
             name: toggle password
+            show_label: true
+            label: 'tap: 1234<br/>hold: 0000<br/>dbltap: none'
+            protect:
+              password: '1234'
+              failure_message: 'Bad password!'
+              success_message: 'Yay! Access granted!'
             tap_action:
-              protect:
-                password: '1234'
-                failure_message: 'Bad password!'
-                success_message: 'Yay! Access granted!'
               action: perform-action
               perform_action: light.toggle
               data:
                 entity_id: light.test_light
+            hold_action:
+              protect:
+                password: '0000'
+              action: more-info
+              entity: light.test_light
+            double_tap_action:
+              protect:
+                password: ''
+              action: more-info
+              entity: switch.skylight
             section_mode: true
             grid_options:
               rows: 2
