--- a/test/ui-lovelace.yaml
+++ b/test/ui-lovelace.yaml
@@ -339,6 +339,9 @@ views:
         name: Entity Picture Cast
         entity_picture: /local/workspace/test/www/cast.jpg
         tooltip: 'mega super long tooltip that should overflow everything here mega super long tooltip that should overflow everything here mega super long tooltip that should overflow everything here mega super long tooltip that should overflow everything here'
+        tap_action:
+          action: javascript
+          javascript: "[[[ return; ]]]"
         styles:
           tooltip:
             - color: red
@@ -347,6 +350,9 @@ views:
         icon: mdi:lock
         name: Lock + Tooltip Test
         tooltip: '[[[ return html`Line Extra Info<br>Next Line<ha-icon icon="mdi:help" style="color: red; width: 1em;"></ha-icon><br>` ]]]'
+        tap_action:
+          action: javascript
+          javascript: "[[[ return; ]]]"
         lock:
           enabled: true
           duration: 7
@@ -2779,6 +2785,425 @@ views:
             styles:
               card:
                 - --button-card-ripple-icon-inset-padding: 0
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+
+  - title: Tooltips
+    type: sections
+    sections:
+      - type: grid
+        cards:
+          - type: "custom:button-card"
+            color_type: label-card
+            name: Tooltip Content
+            styles:
+              card:
+                - font-weight: bold
+                - text-transform: uppercase
+            section_mode: true
+            grid_options:
+              rows: 1
+              columns: 12
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: Config string
+            tooltip: I am a tooltip
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: State string
+            state:
+              - value: "on"
+                tooltip: Tap to turn OFF
+              - value: "off"
+                tooltip: Tap to turn ON
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: Config object
+            tooltip:
+              content: This is a tooltip
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: State object
+            state:
+              - value: "on"
+                tooltip:
+                  content: Tap to turn OFF
+              - value: "off"
+                tooltip:
+                  content: Tap to turn ON
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: Multiline
+            tooltip:
+              content: >
+                This is a tooltip<br/>
+                that spans multiple<br/>
+                lines
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            color_type: label-card
+            name: Tooltip Options
+            styles:
+              card:
+                - font-weight: bold
+                - text-transform: uppercase
+            section_mode: true
+            grid_options:
+              rows: 1
+              columns: 12
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: Delay 1s
+            tooltip:
+              content: I am a tooltip
+              delay: 1s
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: Arrow
+            tooltip:
+              content: I am a tooltip
+              arrow: true
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: Distance 25px
+            tooltip:
+              content: I am a tooltip
+              distance: 25
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: Skidding 50
+            tooltip:
+              content: I am a tooltip
+              skidding: 50
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            color_type: label-card
+            name: Tooltip Placememnt
+            styles:
+              card:
+                - font-weight: bold
+                - text-transform: uppercase
+            section_mode: true
+            grid_options:
+              rows: 1
+              columns: 12
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: top-start
+            tooltip:
+              content: I am a tooltip
+              placement: top-start
+              arrow: true
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: top
+            tooltip:
+              content: I am a tooltip
+              placement: top
+              arrow: true
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: top-end
+            tooltip:
+              content: I am a tooltip
+              placement: top-end
+              arrow: true
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: right-start
+            tooltip:
+              content: I am a tooltip
+              placement: right-start
+              arrow: true
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            color_type: label-card
+            color: white
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: left-start
+            tooltip:
+              content: I am a tooltip
+              placement: left-start
+              arrow: true
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: right
+            tooltip:
+              content: I am a tooltip
+              placement: right
+              arrow: true
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            color_type: label-card
+            color: white
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: left
+            tooltip:
+              content: I am a tooltip
+              placement: left
+              arrow: true
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: right-end
+            tooltip:
+              content: I am a tooltip
+              placement: right-end
+              arrow: true
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            color_type: label-card
+            color: white
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: left-end
+            tooltip:
+              content: I am a tooltip
+              placement: left-end
+              arrow: true
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: bottom-start
+            tooltip:
+              content: I am a tooltip
+              placement: bottom-start
+              arrow: true
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: bottom
+            tooltip:
+              content: I am a tooltip
+              placement: bottom
+              arrow: true
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: bottom-end
+            tooltip:
+              content: I am a tooltip
+              placement: bottom-end
+              arrow: true
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            color_type: label-card
+            name: Tooltip Styling
+            styles:
+              card:
+                - font-weight: bold
+                - text-transform: uppercase
+            section_mode: true
+            grid_options:
+              rows: 1
+              columns: 12
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: Red on white
+            tooltip: I am a tooltip
+            styles:
+              tooltip:
+                - "--secondary-background-color": white
+                - "--primary-text-color": red
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: Consolas bold large
+            tooltip: I am a tooltip
+            styles:
+              tooltip:
+                - "--ha-tooltip-font-family": Consolas
+                - "--ha-tooltip-font-weight": bold
+                - "--ha-tooltip-font-size": var(--ha-font-size-l)
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: Border radius 50
+            tooltip:
+              content: >
+                This is a tooltip<br/>
+                that spans multiple<br/>
+                lines
+            styles:
+              tooltip:
+                - "--ha-tooltip-border-radius": 50px
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: Arrow size 16px
+            tooltip:
+              content: >
+                This is a tooltip<br/>
+                that spans multiple<br/>
+                lines
+              arrow: true
+            styles:
+              tooltip:
+                - "--ha-tooltip-arrow-size": 16px
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: Max width 50px
+            tooltip:
+              content: >
+                This is a tooltip<br/>
+                that spans multiple<br/>
+                lines
+              arrow: true
+            styles:
+              tooltip:
+                - "--max-width": 50px
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: Max width none
+            tooltip:
+              content: >
+                This is a tooltip a very very very long text that should not wrap but extend to full width
+              arrow: true
+            styles:
+              tooltip:
+                - "--max-width": none
+            section_mode: true
+            grid_options:
+              rows: 2
+              columns: 4
+          - type: "custom:button-card"
+            color_type: label-card
+            name: Nested tooltips
+            styles:
+              card:
+                - font-weight: bold
+                - text-transform: uppercase
+            section_mode: true
+            grid_options:
+              rows: 1
+              columns: 12
+          - type: "custom:button-card"
+            entity: switch.skylight
+            name: Parent
+            styles:
+              grid:
+                - grid-template-areas: '"i" "n" "child"'
+                - grid-template-rows: auto auto auto
+            tooltip: I am the parent card tooltip
+            custom_fields:
+              child:
+                card:
+                  type: "custom:button-card"
+                  entity: switch.skylight
+                  name: Child + delay
+                  tooltip:
+                    content: I am the child card tooltip
+                    delay: 500ms
+                  show_icon: false
+                  show_state: false
+                  show_label: false
             section_mode: true
             grid_options:
               rows: 2
