--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,11 +55,13 @@ jobs:
       - name: Build and publish dev documentation
         if: github.ref == 'refs/heads/dev'
         run: |
+          git pull
           cd docs
           mike deploy -u -p --allow-empty dev
       - name: Build and publish stable documentation
         if: github.ref == 'refs/heads/master'
         run: |
+          git pull
           echo "Getting version from package.json"
           cat package.json | jq -r .version
           echo Publishing documentation (only major.minor)
